<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_oops"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        />

    <TextView
        android:id="@+id/errorTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/generic_error_view_title"
        style="@style/errorTitleStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop"
        />

    <TextView
        android:id="@+id/errorDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/generic_error_view_generic_description"
        style="@style/errorDescriptionStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
        android:layout_marginStart="@dimen/margin_history_text_view"
        android:layout_marginEnd="@dimen/margin_history_text_view"
        android:layout_marginTop="@dimen/margin_history_text_view"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/understoodButtom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_history_text_view"
        android:backgroundTint="@color/color_button_buy"
        android:text="@string/understood_button_text"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorDescription"
        android:layout_marginStart="@dimen/margin_history_text_view"
        android:layout_marginEnd="@dimen/margin_history_text_view"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>